--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -15,7 +15,7 @@
 <section class="mission">
     <div class="container mission-content">
         <div class="mission-text" id="about">
-            <h2>Our Mission</h2>
+            <h2>About Us</h2>
             <p style="text-align: justify;">The founder and Managing Director of Multimix Distributors, established in 2016 to make clean energy
                 accessible and affordable. With a passion for renewable energy and experience, I have led the company to
                 achieve industry recognition. as a trusted MNRE vendor and a member of the Masters Association MULTIMIX
