--- a/app/templates/service.html
+++ b/app/templates/service.html
@@ -140,7 +140,7 @@
         <h2>Ready to Harness Solar Power?</h2>
         <p>Contact us today for a free consultation and custom quote. Our solar experts will help you design the perfect
             solar solution for your energy needs and budget.</p>
-        <a href="tel:91" class="btn">Get Your Free Quote</a>
+        <a href="tel:918157033676" class="btn">Get Your Free Quote</a>
     </div>
 </section>
 
